Body-overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ button:focus {
 
 .unlocked {
   position: relative;
+  overflow: hidden;
 }
 
 .dark {
